Update gallery and events with real Wild Resort photos, fix button spacing

--- a/events.html
+++ b/events.html
@@ -68,8 +68,7 @@
                     </div>
 
                     <!-- Parties -->
-                    <div class="exp-card"
-                        style="height: 500px; background-image: url('https://images.unsplash.com/photo-1530103862676-de3c9a59af38?auto=format&fit=crop&q=80');">
+                    <div class="exp-card" style="height: 500px; background-image: url('/resort-family-pool.jpg');">
                         <div class="exp-content">
                             <h3>Private Parties</h3>
                             <p>From birthdays to reunions, celebrate life with good food, music, and privacy.</p>
