--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <li><i class="fas fa-check"></i> Authentic Experience: Real nature, real comfort.</li>
             </ul>
 
-            <a href="stay.html" class="btn btn-primary" style="margin-top: 1.5rem;">View Accommodations</a>
+            <a href="stay.html" class="btn btn-primary" style="margin-top: 2.5rem;">View Accommodations</a>
           </div>
         </div>
       </div>
@@ -208,15 +208,9 @@
           <div class="gallery-item large"><img
               src="https://images.unsplash.com/photo-1523987355523-c7b5b0dd90a7?auto=format&fit=crop&q=80"
               alt="Evening Campfire"></div>
-          <div class="gallery-item"><img
-              src="https://images.unsplash.com/photo-1604999333679-b86d54738315?auto=format&fit=crop&q=80"
-              alt="Safari Tent Interior"></div>
-          <div class="gallery-item"><img
-              src="https://images.unsplash.com/photo-1576610616656-d3aa5d1f4534?auto=format&fit=crop&q=80"
-              alt="Resort Pool View"></div>
-          <div class="gallery-item"><img
-              src="https://images.unsplash.com/photo-1539635278303-d4002c07eae3?auto=format&fit=crop&q=80"
-              alt="Friends Gathering"></div>
+          <div class="gallery-item"><img src="/resort-river.jpg" alt="River Adventure at Wild Resort"></div>
+          <div class="gallery-item"><img src="/resort-pool.jpg" alt="Pool & Treehouse at Wild Resort"></div>
+          <div class="gallery-item"><img src="/resort-family-pool.jpg" alt="Family Enjoying Pool Time"></div>
           <div class="gallery-item large"><img
               src="https://images.unsplash.com/photo-1449034446853-66c86144b0ad?auto=format&fit=crop&q=80"
               alt="Kenyan Sunset"></div>
