Major update: Add professional logo, replace hero and gallery with real resort photos, update Stay page

--- a/stay.html
+++ b/stay.html
@@ -54,26 +54,25 @@
 
                 <div class="experience-grid">
                     <!-- Luxury Tents -->
-                    <div class="exp-card"
-                        style="height: 500px; background-image: url('https://images.unsplash.com/photo-1523987355523-c7b5b0dd90a7?auto=format&fit=crop&q=80');">
+                    <div class="exp-card" style="height: 500px; background-image: url('/resort-outdoor-seating.jpg');">
                         <div class="exp-content">
-                            <h3>Luxury Safari Tents</h3>
-                            <p>En-suite spacious tents with king-size beds, private verandas, and premium amenities.</p>
+                            <h3>Outdoor Relaxation Areas</h3>
+                            <p>Shaded seating areas perfect for groups, families, and peaceful afternoon relaxation.</p>
                             <br>
-                            <a href="https://wa.me/254724582615?text=Inquiry+Safari+Tents" class="btn btn-gold">Check
+                            <a href="https://wa.me/254724582615?text=Inquiry+Outdoor+Areas" class="btn btn-gold">Check
                                 Availability</a>
                         </div>
                     </div>
 
                     <!-- Camping Grounds -->
-                    <div class="exp-card"
-                        style="height: 500px; background-image: url('https://images.unsplash.com/photo-1533587851505-d119e13fa0d7?auto=format&fit=crop&q=80');">
+                    <div class="exp-card" style="height: 500px; background-image: url('/resort-garden.jpg');">
                         <div class="exp-content">
-                            <h3>Camping Grounds</h3>
-                            <p>Bring your own tent or hire one. Enjoy secure, manicured grounds with fire pits and clean
-                                facilities.</p>
+                            <h3>Lush Gardens & Grounds</h3>
+                            <p>Explore our beautiful gardens with tropical plants, peaceful pathways, and natural
+                                beauty.</p>
                             <br>
-                            <a href="https://wa.me/254724582615?text=Inquiry+Camping" class="btn btn-gold">Book Spot</a>
+                            <a href="https://wa.me/254724582615?text=Inquiry+Gardens" class="btn btn-gold">Book
+                                Visit</a>
                         </div>
                     </div>
                 </div>
