--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <header id="main-header">
     <nav class="container">
       <div class="logo">
-        <i class="fas fa-campground" style="margin-right: 10px;"></i> Wild Resort
+        <img src="/logo.svg" alt="Wild Resort Logo"
+          style="width: 50px; height: 50px; margin-right: 12px; vertical-align: middle;">
+        <span style="vertical-align: middle;">Wild Resort</span>
       </div>
       <ul class="nav-links">
         <li><a href="experience.html">Experience</a></li>
@@ -42,7 +44,7 @@
   <main>
     <!-- Hero Section -->
     <section id="hero"
-      style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1478131143081-80f7f84ca84d?auto=format&fit=crop&q=80');">
+      style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url('/resort-outdoor-seating.jpg');">
       <div class="hero-overlay"></div>
       <div class="hero-content container">
         <h1>Escape the Noise. <br> Enter the Wild.</h1>
@@ -167,7 +169,7 @@
               <li><i class="fas fa-check"></i> Authentic Experience: Real nature, real comfort.</li>
             </ul>
 
-            <a href="stay.html" class="btn btn-primary" style="margin-top: 2.5rem;">View Accommodations</a>
+            <a href="stay.html" class="btn btn-primary" style="margin-top: 3rem;">View Accommodations</a>
           </div>
         </div>
       </div>
@@ -205,15 +207,11 @@
       <div class="container">
         <!-- Masonry Layout -->
         <div class="gallery-grid">
-          <div class="gallery-item large"><img
-              src="https://images.unsplash.com/photo-1523987355523-c7b5b0dd90a7?auto=format&fit=crop&q=80"
-              alt="Evening Campfire"></div>
           <div class="gallery-item"><img src="/resort-river.jpg" alt="River Adventure at Wild Resort"></div>
           <div class="gallery-item"><img src="/resort-pool.jpg" alt="Pool & Treehouse at Wild Resort"></div>
           <div class="gallery-item"><img src="/resort-family-pool.jpg" alt="Family Enjoying Pool Time"></div>
-          <div class="gallery-item large"><img
-              src="https://images.unsplash.com/photo-1449034446853-66c86144b0ad?auto=format&fit=crop&q=80"
-              alt="Kenyan Sunset"></div>
+          <div class="gallery-item"><img src="/resort-outdoor-seating.jpg" alt="Outdoor Seating Area"></div>
+          <div class="gallery-item"><img src="/resort-garden.jpg" alt="Lush Garden Views"></div>
         </div>
       </div>
     </section>
