CRITICAL FIX: Remove yellow box blocking text, replace mountain/boat image with resort photo

--- a/index.html
+++ b/index.html
@@ -147,17 +147,16 @@
       <div class="container">
         <div class="split-section">
           <div class="split-image">
-            <img src="https://images.unsplash.com/photo-1510525009512-ad7fc13eefab?q=80&w=2670&auto=format&fit=crop"
-              alt="Family walking in nature">
+            <img src="/resort-guest.jpg" alt="Wild Resort Entrance">
             <div class="floating-badge">
               <span class="number">15+</span>
               <span class="text">Years of<br>Excellence</span>
             </div>
           </div>
           <div class="split-content">
-            <span class="btn btn-gold"
-              style="padding: 0.5rem 1rem; font-size: 0.8rem; margin-bottom: 1rem; pointer-events: none;">For Those Who
-              Value Calm</span>
+            <span
+              style="display: inline-block; color: var(--color-accent); font-size: 0.9rem; font-weight: 600; margin-bottom: 1rem; text-transform: uppercase; letter-spacing: 1px;">For
+              Those Who Value Calm</span>
             <h2>A Resort for Those Who Seek Space & Tranquility</h2>
             <p>Wild Resort is designed for guests who appreciate nature, quiet, and simplicity. This is not a crowded
               luxury hotel — it’s an open, peaceful retreat where space, atmosphere, and genuine connection matter most.
