Fix button spacing to 4rem, add Google Search Console verification placeholder

--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
               <li><i class="fas fa-check"></i> Authentic Experience: Real nature, real comfort.</li>
             </ul>
 
-            <a href="stay.html" class="btn btn-primary" style="margin-top: 3rem;">View Accommodations</a>
+            <a href="stay.html" class="btn btn-primary" style="margin-top: 4rem; display: inline-block;">View
+              Accommodations</a>
           </div>
         </div>
       </div>
